fixed overflow

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,10 @@
     box-sizing: border-box;
 }
 
+section{
+    overflow: hidden;
+}
+
 .no-margin-overflow {
     margin-left: 0;
     margin-right: 0;
